--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <div id="root"></div>
 
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   </body>
 </html>
