--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <div id="root"></div>
 
     <script type="module" src="/src/main.tsx"></script>
-    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script
+      src="https://developers.kakao.com/sdk/js/kakao.js"
+      async
+      defer
+    ></script>
+    <script src="https://www.youtube.com/iframe_api" async defer></script>
   </body>
 </html>
